# fn-dbscan

./: .gitignore  LICENSE  README.md  example_usage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.local.json
data/: dataset_creation.py  example_dataset.csv
examples/: basic_example.py  basic_usage.py  comparison_with_dbscan.py  generate_comprehensive_report.py  test_breast_cancer.py  test_cars.py  test_pathbased.py  test_simulation.py  test_spiral_kaggle.py  test_spiral_manual_params.py  test_spiral_nearby_points.py  test_spiral_optimized.py  test_spiral_recommended.py  user_comparison_script.py
fn_dbscan/: __init__.py  _fuzzy_functions.py  _validation.py  fn_dbscan.py
tests/: __init__.py  test_edge_cases.py  test_fn_dbscan.py  test_fuzzy_functions.py  test_sklearn_compat.py
