[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fn-dbscan"
version = "0.1.8"
description = "Fuzzy Neighborhood DBSCAN clustering algorithm"
readme = "README.md"
authors = [
    {name = "Onur Mert"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # Kütüphanenizin ne tür bir yazılım olduğu
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",

    # Ana Bilimsel Kategoriler
    "Topic :: Scientific/Engineering",
    
    # Yapay Zeka ve Makine Öğrenimi (Zaten var, kalsın)
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    
    # Veri Madenciliği ve Analizi (DBSCAN için en kritik olanı bu)
    "Topic :: Scientific/Engineering :: Information Analysis",
    
    # Matematiksel Algoritmalar (Bulanık mantık/Fuzzy logic kısmı için)
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["clustering", "dbscan", "fuzzy", "machine-learning", "scikit-learn"]
requires-python = ">=3.8,<4.0"
dependencies = [
    "numpy>=1.19.0,<2.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "scipy>=1.5.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
]
viz = [
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/onurceldir123/fn-dbscan"
Repository = "https://github.com/onurceldir123/fn-dbscan"
Issues = "https://github.com/onurceldir123/fn-dbscan/issues"
